--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-ec2</artifactId>
-            <version>1.12.376</version>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>emr</artifactId>
+            <version>2.18.6</version>
         </dependency>
 
     </dependencies>
