--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,19 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-emr</artifactId>
-            <version>1.9.0</version>
+            <version>1.12.367</version>
         </dependency>
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>emr</artifactId>
             <version>2.18.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ec2</artifactId>
+            <version>2.17.81</version>
         </dependency>
 
     </dependencies>
