--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>2.17.81</version>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.18.6</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
